--- a/style.sportshome.css
+++ b/style.sportshome.css
@@ -60,4 +60,17 @@ body {
     background-color: rgba(0, 0, 0, 0.767);
     font-size: 28px;
   }
+  /* Responsive text: If the screen size is 601px wide or more, set the font-size of <div> to 80px */
+@media screen and (min-width: 601px) {
+  div.centered {
+    font-size: 28px;
+  }
+}
+
+/*  Responsive text: If the screen size is 600px wide or less, set the font-size of <div> to 30px */
+@media screen and (max-width: 600px) {
+  div.centered {
+    font-size: 10px;
+  }
+}
  
