--- a/style.sportshome.css
+++ b/style.sportshome.css
@@ -1,12 +1,6 @@
-/* logo at top nav */
-.logo {
-  font-size: 30px;
-  color: blue;
-}
-
 /* Background of Entire website  */
 body {
-    background-color: grey;
+    background-color: gold;
     background-size: cover;
     text-align: center; 
     height: 1024px;
@@ -14,7 +8,7 @@ body {
 }
 /* Add a black background color to the top navigation */
 .topnav {
-    background-color: gold;
+    background-color: blue;
     overflow: hidden;
   }
   
@@ -57,20 +51,24 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgba(0, 0, 0, 0.767);
-    font-size: 28px;
   }
-  /* Responsive text: If the screen size is 601px wide or more, set the font-size of <div> to 80px */
+/* for div headers */ 
+div { 
+    font-size: 40px;
+    background-color: black;
+    color: blue;
+    display: block;
+}
+/* Responsive text: If the screen size is 601px wide or more, set the font-size of <div> to 80px */
 @media screen and (min-width: 601px) {
-  div.centered {
-    font-size: 28px;
+    div.h1.p {
+      font-size: 40px;
+    }
   }
+  
+  /*  Responsive text: If the screen size is 600px wide or less, set the font-size of <div> to 30px */
+  @media screen and (max-width: 600px) {
+    div.h1.p {
+      font-size: 20px;
+    }
 }
-
-/*  Responsive text: If the screen size is 600px wide or less, set the font-size of <div> to 30px */
-@media screen and (max-width: 600px) {
-  div.centered {
-    font-size: 10px;
-  }
-}
- 
