--- a/style.TeamValid.css
+++ b/style.TeamValid.css
@@ -59,3 +59,16 @@ div {
     color: blue;
     display: block;
 }
+/* Responsive text: If the screen size is 601px wide or more, set the font-size of <div> to 80px */
+@media screen and (min-width: 601px) {
+    div.h1.p {
+      font-size: 40px;
+    }
+  }
+  
+  /*  Responsive text: If the screen size is 600px wide or less, set the font-size of <div> to 30px */
+  @media screen and (max-width: 600px) {
+    div.h1.p {
+      font-size: 20px;
+    }
+}
