--- a/style.sportshome.css
+++ b/style.sportshome.css
@@ -6,7 +6,7 @@
 
 /* Background of Entire website  */
 body {
-    background-color: grey;
+    background-color: gold;
     background-size: cover;
     text-align: center; 
     height: 1024px;
@@ -14,7 +14,7 @@ body {
 }
 /* Add a black background color to the top navigation */
 .topnav {
-    background-color: gold;
+    background-color: blue;
     overflow: hidden;
   }
   
@@ -32,7 +32,7 @@ body {
   /* Change the color of links on hover */
   .topnav a:hover {
     background-color: gold;
-    color: black;
+    color: blue;
   }
   
   /* Add an active class to highlight the current page */
