--- a/style.TeamValid.css
+++ b/style.TeamValid.css
@@ -31,7 +31,7 @@ body {
   
   /* Add an active class to highlight the current page */
   .topnav a.active {
-    background-color: blue;
+    background-color: gold;
     color: white;
   }
   
