--- a/style.TeamValid.css
+++ b/style.TeamValid.css
@@ -26,7 +26,7 @@ body {
   /* Change the color of links on hover */
   .topnav a:hover {
     background-color: gold;
-    color: black;
+    color: red;
   }
   
   /* Add an active class to highlight the current page */
