--- a/style.TeamValid.css
+++ b/style.TeamValid.css
@@ -24,7 +24,7 @@ body {
   }
   
   /* Change the color of links on hover */
-  .topnav a:hover {
+  .topnav a.active:hover {
     background-color: gold;
     color: red;
   }
